--- a/app/views/branded/layouts/_navigation.html.erb
+++ b/app/views/branded/layouts/_navigation.html.erb
@@ -31,9 +31,9 @@
               <li <%= 'class=active' if active_page?(new_plan_path, true) %>>
                 <%= link_to _('Create plan for a Research Project'), new_plan_path(context: 'research_project') %>
               </li>
-              <% if Rails.configuration.x.dmpopidor.enable_research_structure_template %>
+              <% if Rails.configuration.x.dmpopidor.enable_research_entity_template %>
                 <li <%= 'class=active' if active_page?(new_plan_path, true) %>>
-                  <%= link_to _('Create plan for a Research Entity'), new_plan_path(context: 'research_structure') %>
+                  <%= link_to _('Create plan for a Research Entity'), new_plan_path(context: 'research_entity') %>
                 </li>
                 <li role="separator" class="divider"></li>
               <% end %>
