The link changes for ticket 339

--- a/app/views/home/_welcome.html.erb
+++ b/app/views/home/_welcome.html.erb
@@ -5,12 +5,12 @@
 <% title _("Welcome to %{application_name}.") % {application_name: application_name} %>
 <div>
   <h1><%= _("Welcome to %{application_name}.") % {application_name: application_name}%></h1>
-  
+
   <%
 
     landing_page_content = _(%{
       <!-- landing page content -->
-      <p> 
+      <p>
         The <strong>DMP Assistant</strong> is a national, online, bilingual data management planning tool developed by the <strong>Digital Research Alliance of Canada (the Alliance)</strong> in collaboration with host institution <strong>University of Alberta</strong> to assist researchers in preparing <strong>data management plans (DMPs)</strong>. This tool is freely available to all researchers, and develops a DMP through a series of key data management questions, supported by best-practice guidance and examples.
       </p>
 
@@ -61,7 +61,7 @@
       </ul>
 
       <p>
-        For more resources and training materials spanning the entire research data life cycle, see the <a href="https://portagenetwork.ca/tools-and-resources/training-resources/"> Portage Network Training Resources. </a>
+        For more resources and training materials spanning the entire research data life cycle, see the <a href="https://alliancecan.ca/en/services/research-data-management/learning-and-training/training-resources/"> Portage Network Training Resources. </a>
       </p>
 
       <p>
