Updated fontawesome to V6

--- a/app/assets/stylesheets/blocks/_font_awesomes.scss
+++ b/app/assets/stylesheets/blocks/_font_awesomes.scss
@@ -15,12 +15,12 @@
 }
 
 /* change color of search icon */
-.fa-search {
+.fa-magnifying-glass {
   color: $color-primary-text;
 }
 
 /* adjust the position of the 'remove - X' button for links */
-.link .fa-times-circle {
+.link .fa-circle-xmark {
   margin-top: $grid-gutter-width;
 }
 
