--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -13,7 +13,7 @@
         <span class="col-xs-11 text"><%= _('Accessible by any member of the High Education and Research community as well as its French or foreign partners') %></span>
       </div>
       <div class="col-xs-12 front-page-list-item">
-        <span class="fas fa-university col-xs-1 icon"></span>
+        <span class="fas fa-building-columns col-xs-1 icon"></span>
         <span class="col-xs-11 text"><%= _('Customizable by any research organization willing to implement a data policy') %></span>
       </div>
       <div class="col-xs-12 front-page-list-item">
@@ -25,7 +25,7 @@
         <span class="col-xs-11 text"><%= _('Collaborative: allows exchanges between partners of a same project and support staff') %></span>
       </div>
       <div class="col-xs-12 front-page-list-item">
-        <span class="fas fa-cogs col-xs-1 icon"></span>
+        <span class="fas fa-gears col-xs-1 icon"></span>
         <span class="col-xs-11 text"><%= _('Machine actionable: facilitates data entry and interactions with data management services') %></span>
       </div>
 
