--- a/app/views/branded/paginable/contributors/_index.html.erb
+++ b/app/views/branded/paginable/contributors/_index.html.erb
@@ -46,10 +46,10 @@
               } do %>
               <span data-toggle="tooltip" 
                     data-original-title="<%= _('Edit') %>" 
-                    class="fas fa-edit"></span>
+                    class="fas fa-pen-to-square"></span>
             <% end %>
             <% if scope.length > 1 %>
-              <span class="delete fas fa-times" 
+              <span class="delete fas fa-xmark" 
                 aria-hidden="true"
                 data-toggle="tooltip" 
                 data-original-title="<%= _('Delete') %>"
