--- a/app/views/branded/plans/_edit_details.html.erb
+++ b/app/views/branded/plans/_edit_details.html.erb
@@ -45,7 +45,7 @@
                 <%= _("Please enter the acronym, title or identifier of the project") %>
                 <a href="<%= about_registries_path %>" target="_blank"
                   data-toggle="tooltip" data-original-title="<%= _("Find out more.") %>">
-                  <span class="registry-info fas fa-info-circle"></span>
+                  <span class="registry-info fas fa-circle-info"></span>
                 </a>
               </label>
               <%= select_tag "anr_project",
