--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -6,7 +6,7 @@
       <span><%= sanitize a.body %></span>
       <% if a.dismissable? %>
         <button class="close" data-dismiss="alert" data-url="<%= user_acknowledge_notification_path(a) %>" data-remote="true" data-method="post" data-params="notification_id=<%= a.id %>" aria-label="Close">
-          <span class="fas fa-times-circle" aria-hidden="true"></span>
+          <span class="fas fa-circle-xmark" aria-hidden="true"></span>
         </button>
       <% end %>
     </div>
