--- a/app/views/orgs/_profile_form.html.erb
+++ b/app/views/orgs/_profile_form.html.erb
@@ -142,7 +142,7 @@
         <legend>
           <%= _('Organisation Types') %>
             &nbsp; <a href="#" aria-label="<%= _('Text') %>" data-toggle="tooltip" data-placement="right" title="<%= org_types_tooltip %>">
-            <i class="fas fa-question-circle fa-reverse" ></i>
+            <i class="fas fa-circle-question fa-reverse" ></i>
             <em class="sr-only"></em>
           </a>
         </legend>
@@ -171,7 +171,7 @@
           <dt>
             <%= _('Organisation type(s)') %>
               &nbsp; <a href="#" aria-label="<%= _('Text') %>" data-toggle="tooltip" data-placement="right" title="<%= org_types_tooltip %>">
-              <i class="fas fa-question-circle fa-reverse" ></i>
+              <i class="fas fa-circle-question fa-reverse" ></i>
               <em class="sr-only"></em>
             </a>
           </dt>
