--- a/engines/madmp_opidor/app/views/dynamic_form/fields/_fragment_select_field.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/_fragment_select_field.html.erb
@@ -46,7 +46,7 @@
             'data-toggle' =>  "tooltip",
             'data-original-title' => _("Click here to add a new item")
         } do %>
-          <i class="fa fa-plus-square"></i>
+          <i class="fa fa-square-plus"></i>
         <% end %>
       </span>
     <% end %>
