--- a/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_multiple_complex.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_multiple_complex.html.erb
@@ -10,7 +10,7 @@
     <%= field_label %>
     <a href="<%= about_registries_path %>" target="_blank"
       data-toggle="tooltip" data-original-title="<%= _("Find out more.") %>">
-      <span class="registry-info fas fa-info-circle"></span>
+      <span class="registry-info fas fa-circle-info"></span>
     </a>
   </legend>
   <div class="col-md-12 dynamic-field select-field linked-fragments-select create-from-registry"
@@ -58,7 +58,7 @@
                 'data-toggle' =>  "tooltip",
                 'data-original-title' => _("Click here to add a new item")
             } do %>
-              <i class="fas fa-plus-square"></i>
+              <i class="fas fa-square-plus"></i>
             <% end %>
           </span>
         <% end %>
