--- a/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_simple.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_simple.html.erb
@@ -31,7 +31,7 @@
                 class: "#{field_class}",
                 id: field_id  %>
     <% unless readonly %>
-      <span class="remove-button fas fa-times"></span>
+      <span class="remove-button fas fa-xmark"></span>
     <% end %>
   </div>
   <% if overridable %>
