--- a/engines/madmp_opidor/app/views/dynamic_form/linked_fragment/_list.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/linked_fragment/_list.html.erb
@@ -34,12 +34,12 @@
             } do %>
             <span data-toggle="tooltip" 
                   data-original-title="<%= _('Edit') %>" 
-                  class="fas fa-edit"></span>
+                  class="fas fa-pen-to-square"></span>
           <% end %>
         <% end %>
       <% end %>
       <% if deletable %>
-        <span class="delete fas fa-times" 
+        <span class="delete fas fa-xmark" 
           aria-hidden="true"
           data-toggle="tooltip" 
           data-original-title="<%= _('Delete') %>"
