--- a/app/views/branded/layouts/_signin_signout.html.erb
+++ b/app/views/branded/layouts/_signin_signout.html.erb
@@ -32,7 +32,7 @@
         <%= link_to '<i class="fas fa-pen-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path %>
       </li>
       <li>
-        <%= link_to '<i class="fas fa-sign-in-alt" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete %>
+        <%= link_to '<i class="fas fa-right-to-bracket" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete %>
       </li>
     </ul>
   </li>
@@ -40,7 +40,7 @@
   <% if !active_page?(root_path, true) %>
     <li>
       <a href="<%= root_path %>">
-        <i class="fas fa-sign-in-alt" aria-hidden="true">&nbsp;</i>
+        <i class="fas fa-right-to-bracket" aria-hidden="true">&nbsp;</i>
         <%= _('Sign in') %>
       </a>
     </li>
