--- a/app/views/branded/org_admin/phases/container.html.erb
+++ b/app/views/branded/org_admin/phases/container.html.erb
@@ -41,7 +41,7 @@
                   <div class="col-sm-12">
                     <div class='text-right text-muted'>
                       <% if template.latest? && (modifiable || template.customization_of.present?) %>
-                        <i class="fas fa-info-circle small"></i>
+                        <i class="fas fa-circle-info small"></i>
                         <%= _("Drag arrows to rearrange sections.") %>
                         <% unless phase.sections.all?(&:modifiable?) %>
                           <%= _("You may place them before or after the main template sections.") %>
