--- a/app/views/org_admin/sections/_section.html.erb
+++ b/app/views/org_admin/sections/_section.html.erb
@@ -19,7 +19,7 @@
         <% plussign = "fa-minus" if current_section.present? && section.id == current_section.id %>
         <i class="fas <%= plussign %> pull-right" aria-hidden="true" title="Click to expand"></i>
         <% if local_assigns[:draggable] %>
-          <i class="fas fa-arrows-alt pull-right" aria-hidden="true"
+          <i class="fas fa-up-down-left-right pull-right" aria-hidden="true"
              title="Drag to reposition">
           </i>
         <% end %>
