--- a/app/views/shared/_popover.html.erb
+++ b/app/views/shared/_popover.html.erb
@@ -2,7 +2,7 @@
 <% if message.present? %>
   <a href="#" class="btn btn-default" data-toggle="tooltip"
      title="<%= message %>" placement="<%= placement %>">
-    <i class="fas fa-question-circle"></i>
+    <i class="fas fa-circle-question"></i>
     <em class="sr-only"><%= message %>></em>
   </a>
 <% end %>
