--- a/engines/madmp_opidor/app/views/dynamic_form/fields/_text_field.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/_text_field.html.erb
@@ -21,11 +21,11 @@
             id: field_id %>
   <% if multiple && readonly == false%>
     <div class="actions">
-      <span class="fas fa-plus-square add-record"></span>
+      <span class="fas fa-square-plus add-record"></span>
       <% if index != 0 %>
-        <span class="fas fa-minus-square remove-record"></span>
+        <span class="fas fa-square-minus remove-record"></span>
       <% else %>
-        <span class="fas fa-minus-square remove-record" style="display:none"></span>
+        <span class="fas fa-square-minus remove-record" style="display:none"></span>
       <% end %>
     </div>
   <% end %>
