--- a/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_single_complex.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/registry/_single_complex.html.erb
@@ -11,7 +11,7 @@
       <%= field_label %>
       <a href="<%= about_registries_path %>" target="_blank"
         data-toggle="tooltip" data-original-title="<%= _("Find out more.") %>">
-        <span class="registry-info fas fa-info-circle"></span>
+        <span class="registry-info fas fa-circle-info"></span>
       </a>
       </legend>
     <% unless value&.data.nil? || value.data.empty? %>
@@ -47,7 +47,7 @@
                       class: "form-control #{field_class}",
                       id: field_id  %>
           <% unless readonly %>
-            <span class="remove-button fas fa-times"></span>
+            <span class="remove-button fas fa-xmark"></span>
           <% end %>
         </div>
         <% if overridable %>
