--- a/app/views/branded/shared/_sign_in_form_header.html.erb
+++ b/app/views/branded/shared/_sign_in_form_header.html.erb
@@ -33,7 +33,7 @@
     <% end %>
   </div>
   <%= f.button(_('Sign in'), class: "btn btn-default", type: "submit") %>
-  <input type="button" class="btn btn-default" onclick="location.href='<%= login_path %>#content'" value="Créer un compte ?" />
+  <input type="button" class="btn btn-default" onclick="location.href='<%= login_path %>#content'" value="<%= _('Create account?') %>" />
  
 
 <% end %>
