Added missing view migrated to fontawesome 6

--- a/app/views/branded/notes/_list.html.erb
+++ b/app/views/branded/notes/_list.html.erb
@@ -19,7 +19,7 @@
                 <% if current_user.id == note.user_id %>
                   <li>
                     <a href=<%= "#note_edit#{note.id}"%> class="note_edit_link">
-                      <i data-toggle="tooltip" data-original-title="<%= _('Edit') %>" class="fas fa-edit"></i>
+                      <i data-toggle="tooltip" data-original-title="<%= _('Edit') %>" class="fas fa-pen-to-square"></i>
                     </a>
                   </li>
                   <li>
