--- a/app/views/branded/plans/_navigation.html.erb
+++ b/app/views/branded/plans/_navigation.html.erb
@@ -2,25 +2,27 @@
 <ul id="plan-navigation" class="nav nav-tabs plan-navigation" role="tablist">
   <li role="presentation" class="<%= (active_page?(plan_path(plan), true) ? 'active' : '') %>">
     <a href="<%= plan_path(plan) %>" role="tab" aria-controls="content">
-        <%= inline_svg_tag "plan_navigation/general_infos.svg", class: 'icon' %>
-      <%= _("General information") %>
+      <%= inline_svg_tag "plan_navigation/general_infos.svg", class: 'icon' %>
+      <span class="active-text"><%= _("General information") %></span>
     </a>
     <span class="active-line"></span>
     <span class="active-bullet">&#x25cf;</span>
   </li>
-  <li role="presentation" class="<%= (active_page?(plan_research_outputs_path(plan), true) ? 'active' : '') %>">
-    <a href="<%= plan_research_outputs_path(plan) %>" role="tab" aria-controls="content">
+  <% if plan.template.classic? %>
+    <li role="presentation" class="<%= (active_page?(plan_research_outputs_path(plan), true) ? 'active' : '') %>">
+      <a href="<%= plan_research_outputs_path(plan) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/research_outputs.svg", class: 'icon' %>
-      <%= _("Research outputs") %>
-    </a>
-    <span class="active-line"></span>
-    <span class="active-bullet">&#x25cf;</span>
-  </li>
+        <span class="active-text"><%= _("Research outputs") %></span>
+      </a>
+      <span class="active-line"></span>
+      <span class="active-bullet">&#x25cf;</span>
+    </li>
+  <% end %>
   <% phases.each do |phase| %>
     <li role="presentation" class="phase-tab <%= (active_page?(edit_plan_path(plan.id, phase_id: phase.id)) ? 'active' : '') %>">
       <a href="<%= edit_plan_path(plan.id, phase_id: phase.id) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/write_plan.svg", class: 'icon' %>
-        <%= (phases.size > 1 ? phase.title : _('Write Plan')) %>
+        <span class="active-text"><%= (phases.size > 1 ? phase.title : _('Write Plan')) %></span>
       </a>
       <span class="active-line"></span>
       <span class="active-bullet">&#x25cf;</span>
@@ -28,8 +30,8 @@
   <% end %>
   <li role="contributors" class="<%= (active_page?(plan_contributors_path(plan)) ? "active" : "") %>">
     <a href="<%= plan_contributors_path(plan) %>" role="tab" aria-controls="content">
-        <%= inline_svg_tag "plan_navigation/contributors.svg", class: 'icon' %>
-      <%= _("Contributors") %>
+      <%= inline_svg_tag "plan_navigation/contributors.svg", class: 'icon' %>
+      <span class="active-text"><%= _("Contributors") %></span>
     </a>
     <span class="active-line"></span>
     <span class="active-bullet">&#x25cf;</span>
@@ -38,7 +40,7 @@
     <li role="budget" class="<%= (active_page?(budget_plan_path(plan)) ? "active" : "") %>">
       <a href="<%= budget_plan_path(plan) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/budget.svg", class: 'icon' %>
-        <%= _("Budget") %>
+        <span class="active-text"><%= _("Budget") %></span>
       </a>
       <span class="active-line"></span>
       <span class="active-bullet">&#x25cf;</span>
@@ -48,7 +50,7 @@
     <li role="presentation" class="<%= (active_page?(share_plan_path(plan)) ? 'active' : '') %>">
       <a href="<%= share_plan_path(plan) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/share.svg", class: 'icon' %>
-        <%= _('Share') %>
+        <span class="active-text"><%= _('Share') %></span>
       </a>
       <span class="active-line"></span>
       <span class="active-bullet">&#x25cf;</span>
@@ -58,7 +60,7 @@
     <li role="presentation" class="<%= (active_page?(request_feedback_plan_path(plan)) ? 'active' : '') %>">
       <a href="<%= request_feedback_plan_path(plan) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/request_feedback.svg", class: 'icon' %>
-        <%= _('Request feedback') %>
+        <span class="active-text"><%= _('Request feedback') %></span>
       </a>
       <span class="active-line"></span>
       <span class="active-bullet">&#x25cf;</span>
@@ -68,7 +70,7 @@
     <li role="presentation" class="<%= (active_page?(download_plan_path(plan)) ? 'active' : '') %>">
       <a href="<%= download_plan_path(plan) %>" role="tab" aria-controls="content">
         <%= inline_svg_tag "plan_navigation/download.svg", class: 'icon' %>
-        <%= _('Download') %>
+        <span class="active-text"><%= _('Download') %></span>
       </a>
       <span class="active-line"></span>
       <span class="active-bullet">&#x25cf;</span>
