Integrated Research Output Creation into WritePlan tab

--- a/app/assets/stylesheets/dmpopidor/_plan.scss
+++ b/app/assets/stylesheets/dmpopidor/_plan.scss
@@ -634,3 +634,13 @@
     color: $blue;
   }
 }
+
+// ##################################
+// REACT (TEMP) FIXES
+// ##################################
+
+#create-research-output-tabs {
+  .nav-tabs {
+    background-color: white;
+  }
+}
