--- a/app/views/branded/plans/_visibility_form.html.erb
+++ b/app/views/branded/plans/_visibility_form.html.erb
@@ -54,7 +54,7 @@
     <% elsif plan.organisationally_visible? %>
       <%= _('<strong>Organisation visibility</strong> - anyone at my organisation can view').html_safe %>
     <% else %>
-      <%= _('<strong>Private visibility</strong> - visible to me, specified collaborators and administrators at my organisation').html_safe %>
+      <strong>Private visibility</strong> - visible to me, specified collaborators and administrators at my organisation
     <% end %>
   </p>
 <% end %>
