--- a/app/views/org_admin/templates/_form.html.erb
+++ b/app/views/org_admin/templates/_form.html.erb
@@ -14,27 +14,18 @@
   </div>
 <% end %>
 
-<% if current_user.org.funder? && !current_user.org.funder_only? %>
-  <!-- If the Org is a funder and another org type then allow then to set the visibility -->
-  <div class="form-group col-xs-8">
-    <%= f.label :visibility, class: 'control-label' %>
+<div class="form-group col-xs-8">
+  <%= f.label :visibility, class: 'control-label' %>
 
-    <div class="checkbox">
-      <%= f.radio_button(:visibility, ::Template.visibilities[:organisationally_visible]) %>
-      <span>&nbsp;<%= _('for internal %{org_name} use only') % { org_name: f.object.org.name } %></span>
-    </div>
-    <div class="checkbox">
-      <%= f.radio_button(:visibility, ::Template.visibilities[:publicly_visible]) %>
-      <span>&nbsp;<%= _('for all users (will appear on funder requirements page)') %></span>
-    </div>
+  <div class="checkbox">
+    <%= f.radio_button(:visibility, ::Template.visibilities[:organisationally_visible]) %>
+    <span>&nbsp;<%= _('for internal %{org_name} use only') % { org_name: f.object.org.name } %></span>
   </div>
-<% else %>
-  <%
-  visibility = f.object.visibility
-  visibility = f.object.org.funder? ? 'publicly_visible' : 'organisationally_visible' if visibility.nil?
-  %>
-  <%= f.hidden_field :visibility, value: visibility %>
-<% end %>
+  <div class="checkbox">
+    <%= f.radio_button(:visibility, ::Template.visibilities[:publicly_visible]) %>
+    <span>&nbsp;<%= _('for all users') %></span>
+  </div>
+</div>
 
 <div class="form-group col-xs-8">
   <%= label_tag(:status, _('Status'), class: "control-label") %>
