--- a/app/views/branded/layouts/_analytics.html.erb
+++ b/app/views/branded/layouts/_analytics.html.erb
@@ -10,7 +10,7 @@
   </script>
 <% end %>
 
-<% unless Rails.env.stage? && Rails.configuration.x.dmproadmap.enable_matomo %>
+<% if Rails.env.production? && Rails.configuration.x.dmproadmap.enable_matomo %>
   <script>
     var _paq = window._paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
