--- a/app/views/branded/layouts/_analytics.html.erb
+++ b/app/views/branded/layouts/_analytics.html.erb
@@ -10,16 +10,16 @@
   </script>
 <% end %>
 
-<% if Rails.env.production? && Rails.configuration.x.dmproadmap.enable_matomo %>
+<% if Rails.env.development? && Rails.configuration.x.dmproadmap.enable_matomo %>
   <script>
     var _paq = window._paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function() {
-      var u="//matomo.cdlib.org/";
+      var u="//<%= Rails.configuration.x.dmproadmap.matomo_url %>/";
       _paq.push(['setTrackerUrl', u+'matomo.php']);
-      _paq.push(['setSiteId', '20']);
+      _paq.push(['setSiteId', '<%= Rails.configuration.x.dmproadmap.matomo_site_id %>']);
       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
       g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
     })();
