fixed up a few tests and pegged Chrome version in  due to an issue with Webdrivers: https://github.com/titusfortner/webdrivers/issues/247

--- a/app/views/branded/layouts/_analytics.html.erb
+++ b/app/views/branded/layouts/_analytics.html.erb
@@ -10,7 +10,8 @@
   </script>
 <% end %>
 
-<% if Rails.env.development? && Rails.configuration.x.dmproadmap.enable_matomo %>
+<% if Rails.env.production? && Rails.configuration.x.dmproadmap.enable_matomo %>
+  <!-- MatomoAnalytics -->
   <script>
     var _paq = window._paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
