--- a/react-client/src/components/forms.scss
+++ b/react-client/src/components/forms.scss
@@ -21,8 +21,8 @@ input[type="submit"] {
   -moz-user-select: none;
   user-select: none;
 
-  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
   &.primary {
     background-color: var(--dmpui-brand-blue-900);
@@ -35,7 +35,6 @@ input[type="submit"] {
     }
   }
 
-
   &.secondary {
     background-color: var(--dmpui-brand-blue-400);
     color: var(--dmpui-brand-blue-900);
@@ -47,7 +46,6 @@ input[type="submit"] {
     }
   }
 
-
   &:focus,
   &:hover,
   &:active {
@@ -56,8 +54,6 @@ input[type="submit"] {
     outline-width: 0px !important;
     box-shadow: none !important;
   }
-
-
 }
 
 .form-wrapper {
@@ -68,8 +64,6 @@ input[type="submit"] {
   border-radius: 12px;
 }
 
-
-
 .form-actions {
   display: flex;
   flex-wrap: wrap;
@@ -77,11 +71,10 @@ input[type="submit"] {
   justify-content: end;
   padding: 0.5rem;
 
-  &>* {
+  & > * {
     margin: 0.5rem;
   }
 }
-
 
 .dmpui-form-cols {
   display: flex;
@@ -89,29 +82,23 @@ input[type="submit"] {
   padding: 1rem;
   text-align: left;
 
-
   justify-content: space-between;
-
 
   @include device(tablet) {
     flex-direction: row;
   }
-
 
   .dmpui-form-col {
     width: 100%;
   }
 }
 
-
 .dmpui-field-group {
   margin-bottom: 2rem;
 
   @include device(tablet) {
-
     margin-bottom: 1rem;
   }
-
 
   padding-right: 1rem;
   text-align: left;
@@ -155,7 +142,6 @@ input[type="submit"] {
     padding: 0.75rem 1rem;
     width: 100%;
 
-
     &:hover {
       outline: none !important;
       border: 1px solid var(--form-field-border-color);
@@ -181,8 +167,35 @@ input[type="submit"] {
     min-height: 10rem;
     line-height: normal;
   }
+  select {
+    box-sizing: border-box;
+    border: 1px solid var(--form-field-border-color);
+    border-radius: 10px;
+    color: var(--form-field-fg-color);
+    background-color: var(--form-field-bg-color);
+    padding: 0.75rem 1rem;
+    width: 100%;
 
+    &:hover {
+      outline: none !important;
+      border: 1px solid var(--form-field-border-color);
+    }
 
+    &:focus {
+      outline: none !important;
+      border: 1px solid #000 !important;
+      box-shadow: inset 0 0 0 0dvi !important;
+    }
+
+    &:focus:invalid {
+      border-color: red;
+    }
+
+    &:disabled {
+      opacity: 0.4;
+      pointer-events: none;
+    }
+  }
 }
 
 .dmpui-field-fileinput-group {
@@ -203,19 +216,17 @@ input[type="submit"] {
 
 .dmpui-field-checkbox-group,
 .dmpui-field-radio-group {
-
   display: flex;
   align-items: center;
   margin: 0.5rem 0;
 
   .checkbox-label,
   .radio-label {
-
     margin: 0;
   }
 
-  input[type=radio],
-  input[type=checkbox] {
+  input[type="radio"],
+  input[type="checkbox"] {
     accent-color: var(--dmpui-brand-blue-500);
     margin: 0 !important;
     line-height: normal;
@@ -228,13 +239,11 @@ input[type="submit"] {
       outline: none !important;
     }
   }
-
 }
 
 .group-disabled {
   opacity: 0.5;
 }
-
 
 .dmpui-search-form-container {
   padding: 2rem;
